--- a/src/RunCsJob.Service/App.config
+++ b/src/RunCsJob.Service/App.config
@@ -23,10 +23,8 @@
 			</layout>
 		</appender>
 		<appender name="FileAppender" type="log4net.Appender.RollingFileAppender">
-			<file type="log4net.Util.PatternString" value="runcsjob-%utcdate{yyyy-MM-dd}.log" />
+			<file type="log4net.Util.PatternString" value="logs\\runcsjob-%date{yyyy-MM-dd}.log" />
 			<appendToFile value="true" />
-			<rollingStyle value="Date" />
-			<datePattern value="yyyy-MM-dd" />
 			<lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
 			<encoding value="utf-8" />
 			<layout type="log4net.Layout.PatternLayout">
