--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -46,10 +46,8 @@
 			<appender-ref ref="FileAppender" />
 		</root>
 		<appender name="FileAppender" type="log4net.Appender.RollingFileAppender">
-			<file type="log4net.Util.PatternString" value="ulearn-%utcdate{yyyy-MM-dd}.log" />
+			<file type="log4net.Util.PatternString" value="logs\\ulearn-%date{yyyy-MM-dd}.log" />
 			<appendToFile value="true" />
-			<rollingStyle value="Date" />
-			<datePattern value="yyyy-MM-dd" />
 			<lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
 			<encoding value="utf-8" />
 			<layout type="log4net.Layout.PatternLayout">
