--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -1300,8 +1300,8 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Jsdifflib\jsdifflib.css" />
-    <Content Include="katex\katex.min.css" />
-    <Content Include="katex\katex.min.js" />
+    <Content Include="katex\*.css" />
+    <Content Include="katex\*.js" />
     <Content Include="Scripts\activate-clipboard.js" />
     <Content Include="Scripts\analytics-highcharts.js" />
     <Content Include="Scripts\analytics.js" />
@@ -1324,39 +1324,7 @@
     <None Include="encoding.xsd">
       <SubType>Designer</SubType>
     </None>
-    <Content Include="katex\fonts\KaTeX_AMS-Regular.eot" />
-    <Content Include="katex\fonts\KaTeX_AMS-Regular.ttf" />
-    <Content Include="katex\fonts\KaTeX_AMS-Regular.woff" />
-    <Content Include="katex\fonts\KaTeX_Main-Bold.eot" />
-    <Content Include="katex\fonts\KaTeX_Main-Bold.ttf" />
-    <Content Include="katex\fonts\KaTeX_Main-Bold.woff" />
-    <Content Include="katex\fonts\KaTeX_Main-Italic.eot" />
-    <Content Include="katex\fonts\KaTeX_Main-Italic.ttf" />
-    <Content Include="katex\fonts\KaTeX_Main-Italic.woff" />
-    <Content Include="katex\fonts\KaTeX_Main-Regular.eot" />
-    <Content Include="katex\fonts\KaTeX_Main-Regular.ttf" />
-    <Content Include="katex\fonts\KaTeX_Main-Regular.woff" />
-    <Content Include="katex\fonts\KaTeX_Math-BoldItalic.eot" />
-    <Content Include="katex\fonts\KaTeX_Math-BoldItalic.ttf" />
-    <Content Include="katex\fonts\KaTeX_Math-BoldItalic.woff" />
-    <Content Include="katex\fonts\KaTeX_Math-Italic.eot" />
-    <Content Include="katex\fonts\KaTeX_Math-Italic.ttf" />
-    <Content Include="katex\fonts\KaTeX_Math-Italic.woff" />
-    <Content Include="katex\fonts\KaTeX_Math-Regular.eot" />
-    <Content Include="katex\fonts\KaTeX_Math-Regular.ttf" />
-    <Content Include="katex\fonts\KaTeX_Math-Regular.woff" />
-    <Content Include="katex\fonts\KaTeX_Size1-Regular.eot" />
-    <Content Include="katex\fonts\KaTeX_Size1-Regular.ttf" />
-    <Content Include="katex\fonts\KaTeX_Size1-Regular.woff" />
-    <Content Include="katex\fonts\KaTeX_Size2-Regular.eot" />
-    <Content Include="katex\fonts\KaTeX_Size2-Regular.ttf" />
-    <Content Include="katex\fonts\KaTeX_Size2-Regular.woff" />
-    <Content Include="katex\fonts\KaTeX_Size3-Regular.eot" />
-    <Content Include="katex\fonts\KaTeX_Size3-Regular.ttf" />
-    <Content Include="katex\fonts\KaTeX_Size3-Regular.woff" />
-    <Content Include="katex\fonts\KaTeX_Size4-Regular.eot" />
-    <Content Include="katex\fonts\KaTeX_Size4-Regular.ttf" />
-    <Content Include="katex\fonts\KaTeX_Size4-Regular.woff" />
+    <Content Include="katex\fonts\*.*" />
     <Content Include="flexslider\CONTRIBUTING.md" />
     <Content Include="flexslider\fonts\flexslider-icon.eot" />
     <Content Include="flexslider\fonts\flexslider-icon.ttf" />
