--- a/src/RunCsJob.Service/App.config
+++ b/src/RunCsJob.Service/App.config
@@ -1,39 +1,40 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-	<configSections>
-		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
-	</configSections>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+  </configSections>
   <appSettings>
-		<!-- Url to Ulearn.Web instance. I.E. https://ulearn.me -->
-		<add key="submissionsUrl" value="https://localhost:44300/" />
-		<!-- Must be equal on Ulearn.Web and RunCsJob instance -->
-		<add key="runnerToken" value="F9388330-FF77-41B4-9011-1785F780C1CF" />
-		<add key="sleepSeconds" value="1" />
-		<add key="jobsToRequest" value="5" />
-		<add key="ulearn.runcsjob.threadsCount" value="1" />
-		<!-- Directory for compiling msbuild solutions. By default it's ./submissions in current directory -->
-		<add key="ulearn.runcsjob.submissionsWorkingDirectory" value="" />
-		<!-- Delete submissions after checking -->
-		<add key="ulearn.runcsjob.deleteSubmissions" value="true" />
-	</appSettings>
-	<log4net>
-		<root>
-			<level value="DEBUG" />
-			<appender-ref ref="FileAppender" />
-		</root>
-		<appender name="FileAppender" type="log4net.Appender.FileAppender">
-			<file value="logs\\runcsjob.log" />
-			<appendToFile value="true" />
-			<lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
-			<encoding value="utf-8" />
-			<layout type="log4net.Layout.PatternLayout">
-				<param name="ConversionPattern" value="%date [%thread] %-5level %logger — %message%newline" />
-			</layout>
-		</appender>
-	</log4net>
-	<startup> 
-		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7" />
-	</startup>
+    <!-- Url to Ulearn.Web instance. I.E. https://ulearn.me -->
+    <add key="submissionsUrl" value="https://localhost:44300/" />
+    <!-- Must be equal on Ulearn.Web and RunCsJob instance -->
+    <add key="runnerToken" value="F9388330-FF77-41B4-9011-1785F780C1CF" />
+    <add key="sleepSeconds" value="1" />
+    <add key="jobsToRequest" value="5" />
+    <add key="ulearn.runcsjob.threadsCount" value="1" />
+    <!-- Directory for compiling msbuild solutions. By default it's ./submissions in current directory -->
+    <add key="ulearn.runcsjob.submissionsWorkingDirectory" value="" />
+    <!-- Delete submissions after checking -->
+    <add key="ulearn.runcsjob.deleteSubmissions" value="true" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
+  </appSettings>
+  <log4net>
+    <root>
+      <level value="DEBUG" />
+      <appender-ref ref="FileAppender" />
+    </root>
+    <appender name="FileAppender" type="log4net.Appender.FileAppender">
+      <file value="logs\\runcsjob.log" />
+      <appendToFile value="true" />
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+      <encoding value="utf-8" />
+      <layout type="log4net.Layout.PatternLayout">
+        <param name="ConversionPattern" value="%date [%thread] %-5level %logger — %message%newline" />
+      </layout>
+    </appender>
+  </log4net>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7" />
+  </startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -74,7 +75,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Runtime" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.20.0" newVersion="4.0.20.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.1.0" newVersion="4.0.1.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Linq" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
