--- a/src/RunCsJob.Service/packages.config
+++ b/src/RunCsJob.Service/packages.config
@@ -3,6 +3,7 @@
   <package id="log4net" version="2.0.8" targetFramework="net47" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net47" />
   <package id="Microsoft.Build.Framework" version="15.3.409" targetFramework="net47" />
+  <package id="Microsoft.Build.Tasks.Core" version="15.3.409" targetFramework="net47" />
   <package id="Microsoft.Build.Utilities.Core" version="15.3.409" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.Common" version="2.4.0" targetFramework="net47" />
