--- a/src/uLearn/uLearn.csproj
+++ b/src/uLearn/uLearn.csproj
@@ -26,6 +26,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <NoWarn>1573</NoWarn>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -34,6 +35,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="DotNetZip, Version=1.10.1.0, Culture=neutral, PublicKeyToken=6583c7c814667745, processorArchitecture=MSIL">
@@ -223,6 +225,12 @@
     <Compile Include="Extensions\EnumerableExtensions.cs" />
     <Compile Include="Extensions\FileSystemExtensions.cs" />
     <Compile Include="Extensions\NameValueCollectionExtensions.cs" />
+    <Compile Include="Extensions\SpellCheckExtentions.cs" />
+    <Compile Include="Extensions\StreamExtensions.cs" />
+    <Compile Include="Extensions\StringExtensions.cs" />
+    <Compile Include="Extensions\StringExtensions_should.cs" />
+    <Compile Include="Extensions\StringHasherExtensions.cs" />
+    <Compile Include="Extensions\StringHasher_should.cs" />
     <Compile Include="Extensions\UriExtensions.cs" />
     <Compile Include="Gender.cs" />
     <Compile Include="Extensions\HttpClientExtensions.cs" />
@@ -300,14 +308,10 @@
     <Compile Include="NotFoundException.cs" />
     <Compile Include="SolutionBuildResult.cs" />
     <Compile Include="SolutionBuilder.cs" />
-    <Compile Include="SpellCheckExtentions.cs" />
     <Compile Include="SpellChecking\SpellChecker.cs" />
     <Compile Include="StagingPackage.cs" />
-    <Compile Include="StreamExtensions.cs" />
     <Compile Include="Result.cs" />
-    <Compile Include="StringExtensions.cs" />
     <Compile Include="CSharp\SyntaxExtensions.cs" />
-    <Compile Include="StringExtensions_should.cs" />
     <Compile Include="TexReplacer.cs" />
     <Compile Include="Unit.cs" />
     <Compile Include="UnitLoader.cs" />
