--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -60,14 +60,23 @@
     <add key="ulearn.baseUrl" value="https://localhost:44300" />
 
     <!-- Папка с курсами. По умолчанию — корневая папка веб-проекта. Должна содержать подпапки Courses, Courses.Staging, Courses.Versions.
-       Если указана папка, отличная от корневой папки веб-проекта, содержимое подпапки Courses должно отдаваться веб-сервером по адресам /Courses/* -->
+         Если указана папка, отличная от корневой папки веб-проекта, содержимое подпапки Courses должно отдаваться веб-сервером по адресам /Courses/* -->
     <add key="ulearn.coursesDirectory" value="" />
+      
+    <!-- Должно быть true только для веб-приложения, которому необходимо иметь сгенерированные zip-архивы с упражнениями -->  
+    <add key="ulearn.buildExerciseStudentZips" value="true" />
+    <!-- Папка со сгенерированными zip-архивами с упражнениями для выдачи пользователям (из них удалено всё лишнее).
+         Генерируются при загрузке курса или по требованию. По умолчанию — подпапка ExerciseStudentZips папки ulearn.coursesDirectory -->
+    <add key="ulearn.exerciseStudentZipsDirectory" value="" />
+      
     <!-- Папка с шаблонами сертификатов. По умолчанию — папка Certificates в корне веб-проекта. 
-       Содержимое этой папки должно отдаваться веб-сервером по адресам /Certificates/* -->
+         Содержимое этой папки должно отдаваться веб-сервером по адресам /Certificates/* -->
     <add key="ulearn.certificatesDirectory" value="" />
+      
     <!-- Если параметр ulearn.requireHttps равен true, то все HTTP-запросы будут возвращать
-       перенаправление на HTTPS (или ошибку 500, если это POST-запрос) -->
+         перенаправление на HTTPS (или ошибку 500, если это POST-запрос) -->
     <add key="ulearn.requireHttps" value="false" />
+      
     <!-- Секретная строка для вычисления секретных хешей -->
     <add key="ulearn.secretForHashes" value="AAGaAxFmEUjmiyixyy6VNPsaqc" />
 
