--- a/src/uLearn.Web/packages.config
+++ b/src/uLearn.Web/packages.config
@@ -47,6 +47,7 @@
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net47" />
   <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net47" developmentDependency="true" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net47" />
+  <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net47" />
   <package id="Microsoft.Owin" version="3.1.0" targetFramework="net47" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.1.0" targetFramework="net47" />
   <package id="Microsoft.Owin.Security" version="3.1.0" targetFramework="net47" />
@@ -55,7 +56,9 @@
   <package id="Microsoft.Owin.Security.OpenIdConnect" version="3.1.0" targetFramework="net47" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net47" />
   <package id="Microsoft.Web.WebJobs.Publish" version="1.0.13" targetFramework="net47" />
+  <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net47" />
   <package id="Modernizr" version="2.8.3" targetFramework="net47" />
+  <package id="NETStandard.Library" version="1.6.1" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net47" />
   <package id="NUnit" version="3.7.1" targetFramework="net47" />
   <package id="NUnit.Console" version="3.6.1" targetFramework="net47" />
@@ -80,21 +83,30 @@
   <package id="System.Diagnostics.FileVersionInfo" version="4.3.0" targetFramework="net47" />
   <package id="System.Diagnostics.StackTrace" version="4.3.0" targetFramework="net47" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net47" />
+  <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net47" />
   <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net47" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net47" />
+  <package id="System.Globalization.Calendars" version="4.3.0" targetFramework="net47" />
   <package id="System.IdentityModel.Tokens.Jwt" version="4.0.1" targetFramework="net47" />
   <package id="System.IO" version="4.3.0" targetFramework="net47" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net47" />
+  <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net47" />
   <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net47" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net47" />
   <package id="System.Linq" version="4.3.0" targetFramework="net47" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net47" />
   <package id="System.Net.Http" version="4.3.2" targetFramework="net47" />
+  <package id="System.Net.Primitives" version="4.3.0" targetFramework="net47" />
+  <package id="System.Net.Sockets" version="4.3.0" targetFramework="net47" />
+  <package id="System.ObjectModel" version="4.3.0" targetFramework="net47" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net47" />
+  <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net47" />
   <package id="System.Reflection.Metadata" version="1.4.2" targetFramework="net47" />
+  <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net47" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net47" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net47" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net47" />
+  <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net47" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net47" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net47" />
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net47" />
@@ -105,17 +117,19 @@
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net47" />
   <package id="System.Text.Encoding.CodePages" version="4.3.0" targetFramework="net47" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net47" />
+  <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net47" />
   <package id="System.Threading" version="4.3.0" targetFramework="net47" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net47" />
   <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net47" />
   <package id="System.Threading.Thread" version="4.3.0" targetFramework="net47" />
+  <package id="System.Threading.Timer" version="4.3.0" targetFramework="net47" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net47" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net47" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net47" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="net47" />
   <package id="System.Xml.XPath" version="4.3.0" targetFramework="net47" />
   <package id="System.Xml.XPath.XDocument" version="4.3.0" targetFramework="net47" />
-  <package id="Telegram.Bot" version="10.4.0" targetFramework="net47" />
+  <package id="Telegram.Bot" version="13.2.1" targetFramework="net47" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net47" />
   <package id="WebGrease" version="1.6.0" targetFramework="net47" />
 </packages>
